Add RBAC to Categories controller
